# game_of_war

./: .gitignore  Cargo.toml  README.md  ideas.txt  main.py  pyproject.toml
gui/: dynamic_card_generator.py  game_manager.py  gui.py  image_cutter.py
src/: cards.rs  deck.rs  game.rs  lib.rs  player.rs
